--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,60 +2,57 @@ version: "3"
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    image: closetool/hadoop-namenode:2.0.0-hadoop3.3.6-java11
     container_name: namenode
+    hostname: namenode
     restart: always
     ports:
       - 9870:9870
       - 9000:9000
     volumes:
-      - hadoop_namenode:/hadoop/dfs/name
+      - ./hack/hadoop_namenode:/hadoop/dfs/name
+      - ./hack/input:/input
     environment:
       - CLUSTER_NAME=test
     env_file:
-      - ./hadoop.env
+      - ./hack/hadoop.env
 
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    image: closetool/hadoop-datanode:2.0.0-hadoop3.3.6-java11
     container_name: datanode
     restart: always
     volumes:
-      - hadoop_datanode:/hadoop/dfs/data
+      - ./hack/hadoop_datanode:/hadoop/dfs/data
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
-      - ./hadoop.env
-  
+      - ./hack/hadoop.env
+
   resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
+    image: closetool/hadoop-resourcemanager:2.0.0-hadoop3.3.6-java11
     container_name: resourcemanager
     restart: always
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864"
     env_file:
-      - ./hadoop.env
+      - ./hack/hadoop.env
 
   nodemanager1:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    image: closetool/hadoop-nodemanager:2.0.0-hadoop3.3.6-java11
     container_name: nodemanager
     restart: always
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
     env_file:
-      - ./hadoop.env
-  
+      - ./hack/hadoop.env
+
   historyserver:
-    image: bde2020/hadoop-historyserver:2.0.0-hadoop3.2.1-java8
+    image: closetool/hadoop-historyserver:2.0.0-hadoop3.3.6-java11
     container_name: historyserver
     restart: always
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
     volumes:
-      - hadoop_historyserver:/hadoop/yarn/timeline
+      - ./hack/hadoop_historyserver:/hadoop/yarn/timeline
     env_file:
-      - ./hadoop.env
-  
-volumes:
-  hadoop_namenode:
-  hadoop_datanode:
-  hadoop_historyserver:
+      - ./hack/hadoop.env
